@@ -6,6 +6,8 @@ crystal-facet-uml (1.51.0) UNRELEASED; urgency=medium
   * classifiers of unknown type are drawn as cornerless box and logged as
     anomaly
   * features, relationships, diagrams of unknown type are just anomalies
+  * The stereotype field is labelled as such. Exceptions are stated only in the
+    user manual.
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 26 Aug 2023 12:00:00 +0200
 
